<resources>
    <string name="app_name">Favorite Place Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_title">places</string>
    <string name="all_tags_title">Categories</string>
    <string name="settings_title">App Settings</string>

    <string name="nav_pending_places_text">Pending places</string>
    <string name="nav_tags_text">Categories</string>
    <string name="nav_settings_text">Settings</string>

    <string name="no_pending_place_text">No Pending place Available</string>
    <string name="pending_place_demo_title">Pending place demo title</string>
    <string name="pending_place_demo_content">Pending place demo content</string>
    <string name="tag_title_demo_text">Demo Category title</string>

    <string name="place_info_demo_tag_text">PlaceDemo</string>
    <string name="place_info_demo_date_text">23 Dec, 2019</string>

    <string name="no_tags_available_text">No Categories Available</string>

    <string name="option_tags_search_text">Search</string>
    <string name="option_tag_settings_text">Settings</string>
    <string name="option_save_place_text">Save place</string>
    <string name="option_tag_edit_text">Edit</string>
    <string name="option_tag_del_text">Remove</string>

    <string name="option_pending_search_text">Search</string>
    <string name="option_pending_settings_text">Settings</string>
    <string name="option_all_tags_text">All Categories</string>

    <string name="add_place_dialog_title">Add New place</string>
    <string name="add_place_image">place Image</string>
    <string name="save_place_dialog_title">Save place</string>
    <string name="edit_place_dialog_title">Edit place</string>
    <string name="place_title_hint">Enter place Name</string>
    <string name="place_content_hint">Enter place Address</string>
    <string name="place_date_hint">Enter place date</string>
    <string name="place_time_hint">Enter place time</string>
    <string name="add_place_dialog_positive_text">Add New place</string>
    <string name="add_place_dialog_cancel_text">Cancel</string>
    <string name="place_title_add_success_msg">place added successfully !</string>

    <string name="add_tag_dialog_title">Add New Category</string>
    <string name="edit_tag_dialog_title">Edit Category</string>
    <string name="add_tag_dialog_positive_text">Add New Category</string>
    <string name="edit_tag_dialog_positive_text">Save</string>
    <string name="add_tag_dialog_cancel_text">Cancel</string>
    <string name="tag_title_add_success_msg">Category added successfully !</string>
    <string name="tag_delete_dialog_title">Category delete Confirmation</string>
    <string name="tag_delete_dialog_msg">If you delete then your places associated with this Category will also be delete.Do you really want to deleted ?</string>
    <string name="tag_delete_cancel">Cancel</string>
    <string name="tag_delete_yes">Delete</string>
    <string name="tag_deleted_success">Category deleted successfully !</string>
    <string name="tag_no_delete">Category not deleted !</string>
    <string name="edit_tag_dialog_cancel_text">Cancel</string>
    <string name="tag_edit_yes">Save</string>
    <string name="tag_edit_cancel">Cancel</string>
    <string name="tag_saved_success">Category saved successfully !</string>
    <string name="tag_no_save">Category not changed !</string>
    <string name="tag_create_dialog_title_text">Category create dialog</string>
    <string name="no_tag_in_the_db_text">There is no Category in the database.You need to create a Category first to continue.</string>
    <string name="create_new_tag">Create New Category</string>


    <string name="tag_title_hint">Enter Category Name</string>
    <string name="edit_tag_title_hint">Enter new Category Name</string>
    <string name="pref_category_title_about">Developer Info</string>


</resources>
