<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_place_dialog_title"
            android:text="@string/edit_place_dialog_title"
            android:background="@color/colorPrimary"
            android:padding="@dimen/add_new_place_dialog_title_padding"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/new_place_container_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/place_title"
                    android:drawableLeft="@drawable/ic_add_new_place_title"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:padding="@dimen/input_padding"
                    android:hint="@string/place_title_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/place_content"
                    android:drawableLeft="@drawable/ic_add_new_place_content"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:padding="@dimen/input_padding"
                    android:hint="@string/place_content_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>
            <Spinner
                android:id="@+id/place_tag"
                android:padding="@dimen/input_padding"
                android:foregroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/place_date"
                    android:drawableLeft="@drawable/ic_add_new_place_date"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:padding="@dimen/input_padding"
                    android:hint="@string/place_date_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/place_dialog_linear_margin_right"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/place_dialog_linear_margin_top"
                android:layout_marginBottom="@dimen/place_dialog_linear_margin_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cancel"
                    android:text="@string/add_place_dialog_cancel_text"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/add_new_place"
                    android:layout_marginLeft="@dimen/place_dialog_add_margin_left"
                    android:text="@string/save_place_dialog_title"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
