<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_place_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/add_new_place_dialog_title_padding"
            android:text="@string/add_place_dialog_title"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/new_place_container_padding">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/place_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_add_new_place_title"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:hint="@string/place_title_hint"
                    android:padding="@dimen/input_padding" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/place_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_add_new_place_content"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:hint="@string/place_content_hint"
                    android:padding="@dimen/input_padding" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/place_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/input_padding" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/place_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_add_new_place_date"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:hint="@string/place_date_hint"
                    android:padding="@dimen/input_padding" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/place_dialog_linear_margin_top"
                android:layout_marginRight="@dimen/place_dialog_linear_margin_right"
                android:layout_marginBottom="@dimen/place_dialog_linear_margin_bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_place_dialog_cancel_text"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/add_new_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/place_dialog_add_margin_left"
                    android:text="@string/add_place_dialog_title"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
